# vs_cmake_pch

./: CMakeLists.txt  README.md  foobar.cpp  foobar.h  main.cpp  pch.hpp
